@@ -3,6 +3,9 @@
                               KijiMR Release Notes
 
 Version 1.0.0-rc62
+  * KIJIMR-183. Adds ability to retrieve entity id from a KijiTableKeyValueStore
+      reader. Call 'KijiTableKeyValueStore.getTableForReader(reader)' to get the
+      underlying KijiTable object.
   * KIJIMR-181. Document default values for KeyValueStores.
   * KIJIMR-171. Reorganize project structure for multiple Hadoop distributions.
       KijiMR jars are now placed in $KIJI_MR_HOME/lib/distribution/hadoop2/.
